--- a/2.Project-Other-parts.ipynb
+++ b/2.Project-Other-parts.ipynb
@@ -76,10 +76,10 @@
       },
       "source": [
         "# # # TWITTER CREDENTIALS # # #\n",
-        "CONSUMER_KEY=\"DSaamoVhWcE972jRrm5l4GaYE\"\n",
-        "CONSUMER_SECRET=\"m7yLJ00fWzcmBAFigeM73Y4y5XEnYpaJmgCXoFajleeAFZS07g\"\n",
-        "ACCESS_TOKEN=\"958716870890319872-WajrAitlXmIbxP0QVfmVieIaJk6ZktS\"\n",
-        "ACCESS_TOKEN_SECRET=\"lBtni8TfYcYqFIL9Mhp9RtmmM3QorUq2t9IDJQGAajTS2\""
+        "CONSUMER_KEY=\"\"\n",
+        "CONSUMER_SECRET=\"\"\n",
+        "ACCESS_TOKEN=\"\"\n",
+        "ACCESS_TOKEN_SECRET=\"\""
       ],
       "execution_count": 3,
       "outputs": []
